# quorum

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
clients/ts/: README.md  package-lock.json  package.json  tsconfig.json
clients/ts/src/: index.ts  quorumx.ts
docs/: agent-orchestrations.md  mcp-config.md  quorumx-config.md  quorumx-implementation-plan.md  release-checklist.md  usage.md  v2-vision.md
notebooks/: agent_orchestrations_overview.ipynb  autogen_quorum_demo.ipynb  crewai_quorum_demo.ipynb  langgraph_quorum_demo.ipynb
src/quorum_core/: __init__.py  api.py  consensus.py  embeddings.py  graph.py  models.py  optimizer.py  quantum.py
src/quorum_mcp/: __init__.py  server.py
src/quorumx/: __init__.py  adapters.py  backends.py  engine.py  http.py  mcp.py  models.py  personas.py  telemetry.py
tests/: test_api.py  test_benchmark.py  test_consensus.py  test_embeddings.py  test_mcp.py  test_models.py  test_optimizer.py  test_quorumx.py  test_quorumx_adapters.py  test_quorumx_gateway.py
